utilities/k8s-jenkins/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  namespace: jenkins
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/path:   /
      prometheus.io/port:   '8080'
spec:
  selector: 
    app: jenkins-server
  type: ClusterIP
  ports:
    - name: ui
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: slave
      port: 50000
      protocol: TCP
    # - name: http
    #   port: 80
    #   targetPort: 8080      
  # type: NodePort  
  # ports:
  #   - port: 8080
  #     targetPort: 8080
  #     nodePort: 32000
